--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
       <header id="headImg">
         <canvas id="canvas"></canvas>
         <h1>
-          <a href="introduce.html">食門
+          <a href="https://jermaineyao.github.io/shihmen/register.html">食門
             <svg id="logo" width="160" height="280" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 160 280">
               <defs>
                 <filter id="goo">
